kubernetes/ingress/harbor.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: ipsilon-api
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /idp
  name: ipsilon
  namespace: os-ipsilon
spec:
  tls:
    - hosts:
        - ipsilon.harboros.net
        - ipsilon.os-ipsilon.svc.harboros.net
      secretName: ipsilon-ssl-secret
  rules:
  - host: ipsilon.harboros.net
    http:
      paths:
      - path: /idp
        backend:
          serviceName: ipsilon
          servicePort: 4143
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: keystone
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: keystone
  namespace: os-keystone
spec:
  tls:
    - hosts:
        - keystone.harboros.net
        - keystone.os-keystone.svc.harboros.net
      secretName: keystone-ssl-secret
  rules:
  - host: keystone.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: keystone
          servicePort: 5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: neutron
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: neutron
  namespace: os-neutron
spec:
  tls:
    - hosts:
        - neutron.harboros.net
        - neutron.os-neutron.svc.harboros.net
      secretName: neutron-ssl-secret
  rules:
  - host: neutron.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: neutron
          servicePort: 9696
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: glance
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: glance
  namespace: os-glance
spec:
  tls:
    - hosts:
        - glance.harboros.net
        - glance.os-glance.svc.harboros.net
      secretName: glance-ssl-secret
  rules:
  - host: glance.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: glance
          servicePort: 9292
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: glance-reg
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: glance-registry
  namespace: os-glance
spec:
  tls:
    - hosts:
        - glance-registry.harboros.net
        - glance-registry.os-glance.svc.harboros.net
      secretName: glance-registry-ssl-secret
  rules:
  - host: glance-registry.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: glance-registry
          servicePort: 9191
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: cinder
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: cinder
  namespace: os-cinder
spec:
  tls:
    - hosts:
        - cinder.harboros.net
        - cinder.os-cinder.svc.harboros.net
      secretName: cinder-ssl-secret
  rules:
  - host: cinder.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: cinder
          servicePort: 8776
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: nova
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: nova
  namespace: os-nova
spec:
  tls:
    - hosts:
        - nova.harboros.net
        - nova.os-nova.svc.harboros.net
      secretName: nova-ssl-secret
  rules:
  - host: nova.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: nova
          servicePort: 8774
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: heat
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: heat
  namespace: os-heat
spec:
  tls:
    - hosts:
        - heat.harboros.net
        - heat.os-heat.svc.harboros.net
      secretName: heat-ssl-secret
  rules:
  - host: heat.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: heat
          servicePort: 8004
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: heat-cfn
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: heat-cfn
  namespace: os-heat
spec:
  tls:
    - hosts:
        - heat-cfn.harboros.net
        - heat-cfn.os-heat.svc.harboros.net
      secretName: heat-cfn-ssl-secret
  rules:
  - host: heat-cfn.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: heat-cfn
          servicePort: 8000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: heat-cloudwatch
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: heat-cloudwatch
  namespace: os-heat
spec:
  tls:
    - hosts:
        - heat-cloudwatch.harboros.net
        - heat-cloudwatch.os-heat.svc.harboros.net
      secretName: heat-cloudwatch-ssl-secret
  rules:
  - host: heat-cloudwatch.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: heat-cloudwatch
          servicePort: 8003
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: murano
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: murano
  namespace: os-murano
spec:
  tls:
    - hosts:
        - murano.harboros.net
        - murano.os-murano.svc.harboros.net
      secretName: murano-ssl-secret
  rules:
  - host: murano.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: murano
          servicePort: 8082
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: api
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: api
  namespace: os-api
spec:
  tls:
    - hosts:
        - api.harboros.net
        - api.os-api.svc.harboros.net
      secretName: api-ssl-secret
  rules:
  - host: api.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 4433
