kubernetes/ingress/ipsilon.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: ipsilon-api
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /idp
  name: ipsilon
  namespace: os-ipsilon
spec:
  tls:
    - hosts:
        - ipsilon.harboros.net
      secretName: ipsilon-ssl-secret
    - hosts:
        - ipsilon.os-ipsilon.svc.harboros.net
      secretName: ipsilon-ssl-secret
  rules:
  - host: ipsilon.harboros.net
    http:
      paths:
      - path: /idp
        backend:
          serviceName: ipsilon
          servicePort: 4143
  - host: ipsilon.os-ipsilon.svc.harboros.net
    http:
      paths:
      - path: /idp
        backend:
          serviceName: ipsilon
          servicePort: 4143
