kubernetes/ingress/keystone.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: keystone
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: keystone
  namespace: os-keystone
spec:
  tls:
    - hosts:
        - keystone.harboros.net
      secretName: keystone-ssl-secret
    - hosts:
        - keystone.os-keystone.svc.harboros.net
      secretName: keystone-ssl-secret
  rules:
  - host: keystone.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: keystone
          servicePort: 5000
  - host: keystone.os-keystone.svc.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: keystone
          servicePort: 5000
