kubernetes/ingress/neutron.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    openstack-app: neutron
    version: v0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/rewrite-target: /
  name: neutron
  namespace: os-neutron
spec:
  tls:
    - hosts:
        - neutron.harboros.net
      secretName: neutron-ssl-secret
    - hosts:
        - neutron.os-neutron.svc.harboros.net
      secretName: neutron-ssl-secret
  rules:
  - host: neutron.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: neutron
          servicePort: 9696
  - host: neutron.os-neutron.svc.harboros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: neutron
          servicePort: 9696
